dockerize api & add get products by category id route/controller
