# routes/products.js
@@ -5,9 +5,11 @@ const {
   updateProduct,
   deleteProduct,
   createProduct,
+  getProductsByCategoryId,
 } = require("../controllers/products");
 
 router.route("/").get(getProducts).post(createProduct);
 
 router.route("/:id").get(getProduct).put(updateProduct).delete(deleteProduct);
+router.route("/category/:categoryId").get(getProductsByCategoryId);
 module.exports = router;
